cambios en colores de gradient

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body {
-  background: rgb(34, 193, 195);
-  background: radial-gradient(
+  background: rgb(17, 66, 80);
+  background: linear-gradient(
     circle,
-    rgba(34, 193, 195, 1) 0%,
-    rgba(253, 187, 45, 1) 100%
+    rgba(17, 66, 80, 1) 0%,
+    rgba(0, 128, 128, 1) 100%
   );
 }
